# ci-platform

./: .gitignore  CLAUDE.md  CODE_GRAPH_REVIEW.md  DEPENDENCIES.md  PROJECT_STRUCTURE.md  domain_config.py  prompt0_ci_structural_map.py  pyproject.toml  test_results_ci.txt  test_results_ci_age.txt  test_results_ci_verbose.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
ci_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ci_platform/audit/: evidence_ledger.py
ci_platform/auth/: saml.py
ci_platform/connectors/: base.py  celonis.py  profiles.py  sap.py  sentinel.py  sentinel_writeback.py  splunk.py  transformers.py
ci_platform/copilot_core/: __init__.py  background.py  cache.py  context_cache.py  counters.py  pipeline.py
ci_platform/enrichment/: enrichment_advisor.py
ci_platform/entity_resolution/: resolver.py
ci_platform/graph/: __init__.py  age_client.py  age_graph_store.py  age_sdk_adapter.py  agtype.py
ci_platform/onboarding/: centroid_convergence.py  deployment_qualification.py  (+1 more)
dataops/: __init__.py  schema.py
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  ground_truth.txt  manifest.json
scripts/: seed_dataops_graph.py  setup_age_windows.ps1  setup_age_wsl.sh  start_dev.ps1
tests/: test_age_archive.py  test_age_client.py  test_age_cypher_compat.py  test_age_graph_store.py  test_age_graph_store_v.py  test_age_sdk_adapter.py  test_age_type_roundtrip.py  test_agtype.py  test_background_task_manager.py  test_celonis_connector.py  test_centroid_distance.py  test_connector_transformers.py  test_counter_store.py  test_counter_store_live_age.py  test_counter_store_route_readiness.py  test_dataops_schema.py  test_decision_pipeline.py  test_deployment_qualification.py  test_enterprise_connector_profiles.py  test_entity_cache.py  test_entity_cache_integration.py  test_entity_resolution.py  test_evidence_ledger.py  test_evidence_ledger_concurrency.py  test_graph_backend_switcher.py  test_l5_upsert_current.py  test_onboarding_pipeline.py  test_p28_enrichment_advisor.py  test_pii_redactor.py  test_s2p_domain_config_v2.py  test_saml.py  test_sap_connector.py  test_sentinel.py  test_sentinel_writeback.py  test_splunk.py  test_two_phase_strategy.py  test_type_checking.py
(+20 files in other folders)
