[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-platform"
version = "0.1.0"
description = "Compounding Intelligence Platform shared infrastructure"
requires-python = ">=3.11"
dependencies = ["httpx>=0.25.0", "numpy>=1.24.0"]

[tool.setuptools.packages.find]
include = ["ci_platform*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
