[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-platform"
version = "0.1.0"
description = "Compounding Intelligence Platform shared infrastructure"
requires-python = ">=3.11"
dependencies = ["httpx>=0.25.0", "numpy>=1.24.0", "python3-saml>=1.16.0"]

[project.optional-dependencies]
graph = ["psycopg[async]>=3.1.0"]

[tool.setuptools.packages.find]
include = ["ci_platform*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
env = [
    "DATABASE_URL=postgresql://postgres:postgres@localhost:5433/soc_copilot",
    "AGE_GRAPH_NAME=soc_graph",
]
